--- a/01-HelloOS/Makefile
+++ b/01-HelloOS/Makefile
@@ -12,6 +12,10 @@ os.elf:start.s os.c
 	$(CC) $(CFLAGS) -T os.ld -o os.elf $^
 
 
-
 clean:
 	rm -f *.elf
+
+qemu: $(TARGET)
+	@qemu-system-riscv32 -M ? | grep virt > /dev/null || exit
+	@echo "Press Ctrl-A and then X to exit QEMU"
+	$(QEMU) $(QFLAGS) -kernel os.elf
