[dev] 1.fix context switch 2.add struct context 3.create new file. riscv.h sys.h 4.fix stack problems.

--- a/02-ContextSwitch/Makefile
+++ b/02-ContextSwitch/Makefile
@@ -8,7 +8,7 @@ OBJDUMP =riscv64-unknown-elf-objdump
 
 all:os.elf
 
-os.elf:start.s os.c
+os.elf:start.s sys.s os.c
 	$(CC) $(CFLAGS) -T os.ld -o os.elf $^
 
 
