[dev] 1.add risc-v csr api   mie   mtvec   mepc   mcause   mstatus 2.add timer.c .h   timer_init   timecmp_set   timer_handler 3.modify sys.s   add sys_timer api, handle mepc

--- a/04-TimerInterrupt/Makefile
+++ b/04-TimerInterrupt/Makefile
@@ -8,7 +8,7 @@ OBJDUMP =riscv64-unknown-elf-objdump
 
 all:os.elf
 
-os.elf: start.s sys.s lib.c task.c os.c
+os.elf: start.s sys.s lib.c riscv.c task.c timer.c os.c
 	$(CC) $(CFLAGS) -T os.ld -o os.elf $^
 
 clean:
